ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nporoykov-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nporoykov-service
            port:
              number: 8000
